[package]
name = "lookout_g"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
google-calendar3 = "5.0.5"
ical = "0.11.0"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
mockito = "1.5.0"
